--- a/WebSocketServer/package.json
+++ b/WebSocketServer/package.json
@@ -14,7 +14,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "wss": "node index.js"
+    "wss": "node index.js",
+    "server": "node index.js"
   },
   "dependencies": {
     "ws": "^8.18.3"
