Add support for empty messages

--- a/todo.yml
+++ b/todo.yml
@@ -1,3 +1,5 @@
 todo:
   - 'Print status on world join'
   - 'Keep track of wether player is in world and open and close connection'
+  - 'receive CHAT: print chat message'
+  - 'receive SAY: send msg to server'
