Fix SENT filter and finishing touches

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,6 @@
   "arrowParens": "always",
   "htmlWhitespaceSensitivity": "css",
   "singleAttributePerLine": false,
-  "bracketSameLine": true
+  "bracketSameLine": true,
+  "endOfLine": "lf"
 }
