--- a/todo.yml
+++ b/todo.yml
@@ -3,6 +3,7 @@ todo:
   - 'add INV event to click on a slot'
   - 'test if get hp still works'
   - 'config menu for webclient so they can change: name, (uuid, ), URL, SECRET, channel (only on load)'
+  - 'add to webclient footer: icon link to github'
   - 'add to cv'
 
 security: 'solution to message duping in WS:
